--- a/distribution-s3/Dockerfile
+++ b/distribution-s3/Dockerfile
@@ -1,3 +1,4 @@
 FROM registry:2
 MAINTAINER Jeff Nickoloff "jeff@allingeek.com"
+CMD ["/etc/docker/registry/config.yml"]
 COPY config.yml /etc/docker/registry/config.yml
